--- a/Lesson15/css/Lab03.css
+++ b/Lesson15/css/Lab03.css
@@ -6,8 +6,8 @@
     background-color: #ccc;
 }
 .container{
-    margin: 1rem auto;
-    width: 550px;
+    margin: 1rem 10%;
+    /* width: 550px; */
     background-color: #fff;
 }
 #main h1{
@@ -34,6 +34,7 @@
 #image-small ul li{
     height: 70px;
     margin: 0 2px;
+    flex: 0 100% ;
 }
 #image-small ul li:first-child{
     margin-left: 0;
